# PokemonScraper

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DownloadManager.cpp  DownloadManager.h  Logs.cpp  Logs.h  README.md  database.mermaid  main.cpp
